--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Vikas Jain</h1>
-						<p>Security Researcher &nbsp;&bull;&nbsp; Traveller & Shutterbug</p>
+						<p>Security Researcher &nbsp;&bull;&nbsp; Traveller &nbsp;&bull;&nbsp; Shutterbug</p>
 						<nav>
 							<ul>
 								<li><a href="https://www.twitter.com/ervikey" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
