--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 							<ul>
 								<li><a href="https://www.twitter.com/ervikey" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.facebook.com/abs0lut3Zer0" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="https://gallery.vikas-jain.com" class="icon fa-camera-retro"><span class="label">Photo Gallery</span></a></li>
+								<li><a href="https://vikas-jain.com" class="icon fa-camera-retro"><span class="label">Photo Gallery</span></a></li>
 								<li><a href="https://in.linkedin.com/in/vikasjainlikkedin" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://github.com/vikas-jain" class="icon fa-github"><span class="label">Blog</span></a></li>
+								<li><a href="https://github.com/vikey" class="icon fa-github"><span class="label">Blog</span></a></li>
 								<li><a href="mailto:me@vikas-jain.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
