--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
 		<noscript>
@@ -14,8 +14,8 @@
 			<link rel="stylesheet" href="css/style-wide.css" />
 			<link rel="stylesheet" href="css/style-noscript.css" />
 		</noscript>
-		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+		[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]
+		[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]
 	</head>
 	<body class="loading">
 		<div id="wrapper">
