--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]
+		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
 		<noscript>
@@ -14,8 +14,8 @@
 			<link rel="stylesheet" href="css/style-wide.css" />
 			<link rel="stylesheet" href="css/style-noscript.css" />
 		</noscript>
-		[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]
-		[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]
+		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
 	<body class="loading">
 		<div id="wrapper">
@@ -31,9 +31,9 @@
 							<ul>
 								<li><a href="https://www.twitter.com/ervikey" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.facebook.com/abs0lut3Zer0" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="https://vikas-jain.com" class="icon fa-camera-retro"><span class="label">Photo Gallery</span></a></li>
+								<li><a href="https://gallery.vikas-jain.com" class="icon fa-camera-retro"><span class="label">Photo Gallery</span></a></li>
 								<li><a href="https://in.linkedin.com/in/vikasjainlikkedin" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://github.com/vikey" class="icon fa-github"><span class="label">Blog</span></a></li>
+								<li><a href="https://github.com/ervikey" class="icon fa-github"><span class="label">Blog</span></a></li>
 								<li><a href="mailto:me@vikas-jain.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
