--- a/feedback.html
+++ b/feedback.html
@@ -1,1 +1,1 @@
-<iframe src="https://docs.google.com/forms/d/1Qh3wGmG-toBVSG7bLGJ1FU06U0mqaIASKirkyW35yBA/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<iframe src="https://docs.google.com/forms/d/1Qh3wGmG-toBVSG7bLGJ1FU06U0mqaIASKirkyW35yBA/viewform?embedded=true" width= 100%  height=100% frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
