--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>Vikas Jain</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="Personal Webpage" content="" />
+		<meta name="Explore,Travler,Researcher,Security Expert,Phographer" content="" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
