--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="Personal Webpage" content="" />
 		<meta name="Explore,Travler,Researcher,Security Expert,Phographer" content="" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
 		<noscript>
