--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="Explore,Travler,Researcher,Security Expert,Phographer" content="" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+		<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="vikasjainlikkedin"><a class="LI-simple-link" href='https://in.linkedin.com/in/vikasjainlikkedin?trk=profile-badge'>Vikas Jain</a></div>
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
 		<noscript>
