--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								<li><a href="https://www.twitter.com/ervikey" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.facebook.com/abs0lut3Zer0" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://vikas-jain.com" class="icon fa-camera-retro"><span class="label">Photo Gallery</span></a></li>
-								<li><a href="https://in.linkedin.com/in/vikasjainlikkedin" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://in.linkedin.com/in/-vikasjain" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/ervikey" class="icon fa-github"><span class="label">Blog</span></a></li>
 								<li><a href="mailto:me@vikas-jain.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
@@ -53,7 +53,5 @@
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-40581332-2', 'auto');ga('send', 'pageview');</script>
 	</body>
-	<!-- Start of HubSpot Embed Code -->
-  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/14538262.js"></script>
-<!-- End of HubSpot Embed Code -->
+
 </html>
