--- a/index.html
+++ b/index.html
@@ -1,57 +1,65 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Vikas Jain</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="Personal Webpage" content="" />
-		<meta name="Explore,Travler,Researcher,Security Expert,Phographer" content="" />
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-		<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="vikasjainlikkedin"><a class="LI-simple-link" href='https://in.linkedin.com/in/vikasjainlikkedin?trk=profile-badge'>Vikas Jain</a></div>
-		<script src="js/skel.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-wide.css" />
-			<link rel="stylesheet" href="css/style-noscript.css" />
-		</noscript>
-		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-	</head>
-	<body class="loading">
-		<div id="wrapper">
-			<div id="bg"></div>
-			<div id="overlay"></div>
-			<div id="main">
+<head>
+    <title>Vikas Jain</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="description" content="Personal Webpage of Vikas Jain" />
+    <meta name="keywords" content="Explore, Traveler, Researcher, Security Expert, Photographer" />
+    <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+    <script src="js/skel.min.js"></script>
+    <script src="js/init.js"></script>
+    <noscript>
+        <link rel="stylesheet" href="css/skel.css" />
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/style-wide.css" />
+        <link rel="stylesheet" href="css/style-noscript.css" />
+    </noscript>
+    <!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+    <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+</head>
+<body class="loading">
+    <div id="wrapper">
+        <div id="bg"></div>
+        <div id="overlay"></div>
+        <div id="main">
 
-				<!-- Header -->
-					<header id="header">
-						<h1>Vikas Jain</h1>
-						<p>Security Researcher &nbsp;&bull;&nbsp; Traveller &nbsp;&bull;&nbsp; Shutterbug</p>
-						<nav>
-							<ul>
-								<li><a href="https://www.twitter.com/ervikey" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="https://www.facebook.com/abs0lut3Zer0" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="https://vikas-jain.com" class="icon fa-camera-retro"><span class="label">Photo Gallery</span></a></li>
-								<li><a href="https://in.linkedin.com/in/-vikasjain" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://github.com/ervikey" class="icon fa-github"><span class="label">Blog</span></a></li>
-								<li><a href="mailto:me@vikas-jain.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-							</ul>
-						</nav>
-					</header>
+            <!-- Header -->
+            <header id="header">
+                <h1>Vikas Jain</h1>
+                <p>Security Researcher &nbsp;&bull;&nbsp; Traveller &nbsp;&bull;&nbsp; Shutterbug</p>
+                <nav>
+                    <ul>
+                        <li><a href="https://www.twitter.com/ervikey" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                        <li><a href="https://www.facebook.com/abs0lut3Zer0" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                        <li><a href="https://vikas-jain.com" class="icon fa-camera-retro"><span class="label">Photo Gallery</span></a></li>
+                        <li><a href="https://www.linkedin.com/in/-vikasjain/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                        <li><a href="https://github.com/ervikey" class="icon fa-github"><span class="label">Blog</span></a></li>
+                        <li><a href="mailto:me@vikas-jain.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+                    </ul>
+                </nav>
+            </header>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<span class="copyright">&copy; Vikas Jain </span>
-					</footer>
+            <!-- LinkedIn Badge -->
+            <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="vikasjainlikkedin">
+                <a class="LI-simple-link" href='https://in.linkedin.com/in/vikasjainlikkedin?trk=profile-badge'>Vikas Jain</a>
+            </div>
 
-			</div>
-		</div>
+            <!-- Footer -->
+            <footer id="footer">
+                <span class="copyright">&copy; Vikas Jain</span>
+            </footer>
 
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-40581332-2', 'auto');ga('send', 'pageview');</script>
-	</body>
+        </div>
+    </div>
 
+<!--    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-40581332-2', 'auto');
+        ga('send', 'pageview');
+    </script> -->
+</body>
 </html>
